RESOLVED FIXED133038
We shouldn't make a ScrollingThread on iOS.
https://bugs.webkit.org/show_bug.cgi?id=133038
Summary We shouldn't make a ScrollingThread on iOS.
Andreas Kling
Reported 2014-05-17 18:05:23 PDT
Attachments
Patch (1.37 KB, patch)
2014-05-17 18:07 PDT, Andreas Kling
sam: review+
Andreas Kling
Comment 1 2014-05-17 18:07:29 PDT
Sam Weinig
Comment 2 2014-05-17 18:57:49 PDT
Comment on attachment 231643 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=231643&action=review > Source/WebCore/ChangeLog:10 > + * platform/MemoryPressureHandler.cpp: > + (WebCore::MemoryPressureHandler::releaseMemory): This could use some explanation. I assume this is the only place where we dispatch the to the scrolling thread still? Perhaps we should have a proper ENABLE() for this and compile out all the ScrollingThread code.
Andreas Kling
Comment 3 2014-05-17 19:05:57 PDT
Tim Horton
Comment 4 2014-05-18 20:23:31 PDT
This doesn't seem like the right fix. What if we have UI-side compositing turned on on Mac?
Andreas Kling
Comment 5 2014-07-03 23:46:23 PDT
*** Bug 133037 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.