We shouldn't make a ScrollingThread on iOS. <https://webkit.org/b/133038> <rdar://problem/16947589>

Don't call ScrollingThred::dispatch() from the pressure relief
code on iOS since that will end up instantiating a scrolling thread
which we'd otherwise never have.

Reviewed by Sam Weinig.

* platform/MemoryPressureHandler.cpp:
(WebCore::MemoryPressureHandler::releaseMemory):

Canonical link: https://commits.webkit.org/151068@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169004 268f45cc-cd09-0410-ab3c-d52691b4dbfc